fixed card rendering on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --vh: 1vh;
+}
+
 .selection-overlay {
     box-shadow: 0 0 10px 2px rgba(253, 224, 71, 0.8);
 }
